# atlas

./: .gitignore  .mcp.json  LICENSE  README.md
.claude/skills/run-atlas/: SKILL.md  seed.sql
.github/workflows/: db-backup.yml  deploy.yml
docs/: teams-inbound-plan.md  teams-integration-plan.md
paper-radar/: .dockerignore  .env.example  .gitignore  LICENSE  README.md  fly.toml  pyproject.toml
paper-radar/.streamlit/: config.toml
paper-radar/api/: .env.example  Dockerfile  README.md  __init__.py  app.py  backfill_embeddings.py  backfill_enrichment.py  config.py  deps.py  embeddings.py  enrichment.py  import_teams_pdfs.py  integrations.py  map_summary.py  maps.py  overview.py  supa.py  teams_integration.py
paper-radar/app/: streamlit_app.py  theme.py
paper-radar/atlas_mcp/: __init__.py  __main__.py  composite.py  config.py  lab.py  moodboard.py  render.py  server.py  spec.py
paper-radar/data/fixtures/: papers.json
paper-radar/docs/: CLAUDE_INTEGRATION_PLAN.md  DEPLOYMENT_PLAN.md  EMBEDDINGS_PLAN.md  MAP_DASHBOARDS_NEXT.md  MAP_DASHBOARDS_PROPOSAL.md  MAP_DASHBOARDS_V2_IMPLEMENTATION.md  MAP_DASHBOARDS_V2_PROPOSAL.md  MAP_OVERVIEW_PLAN.md  MCP_SCIENTIST_TOOLS_PLAN.md  MIGRATION_PLAN.md  MOODBOARD_MCP_PLAN.md  REDESIGN_IMPLEMENTATION_PLAN.md  STYLE_CARDS_PLAN.md  UX-REVIEW.md  atlas-copy-deck.html  atlas-redesign-mockup.html  map-dashboard-v2-mockup.html  map-dashboards-flow.html
paper-radar/paper_radar/: __init__.py  auth.py  cli.py  config.py  db.py  models.py  social.py  store.py
paper-radar/paper_radar/embed/: __init__.py  embed.py  index.py
paper-radar/paper_radar/enrich/: __init__.py  agent.py
paper-radar/paper_radar/ingest/: __init__.py  bibtex.py  metadata.py  pdf_extract.py  url_guard.py  urls.py
paper-radar/paper_radar/taste/: __init__.py  eval.py  score.py
paper-radar/supabase/: README.md  config.toml
paper-radar/supabase/migrations/: 20260711163826_init.sql  20260711163827_rls.sql  20260711163828_team_rpcs.sql  20260711163829_comments_update.sql  20260711163830_post_tags.sql  20260712101500_search_rpcs.sql  20260712120000_mood_board.sql  20260712121000_mood_board_storage.sql  20260712130000_paper_search.sql  20260712140000_semantic_search.sql  20260712150000_paper_delete.sql  20260712160000_lab_admin.sql  20260712160000_trends_signature.sql  20260712170000_figure_origin.sql  20260712170000_recommendations.sql  20260712180000_recommend_v2.sql  20260713000000_doi_casefold.sql  20260713090000_mcp_access.sql  20260713140000_bibtex_import.sql  20260713160000_paper_filters.sql  20260713170000_maps.sql  20260713180000_maps_threshold.sql  20260713190000_style_cards.sql  20260713200000_maps_service_role_grant.sql  20260713210000_harden_team_membership.sql  20260713220000_rls_write_checks.sql  20260716120000_teams_source.sql  20260716150000_team_integrations.sql  20260717120000_teams_inbound_secret.sql
paper-radar/supabase/tests/: figures_rls_test.sql  maps_test.sql  maps_threshold_test.sql  membership_hardening_test.sql  recommendations_test.sql  rls_isolation_test.sql
paper-radar/tests/: test_api.py  test_atlas_mcp.py  test_auth.py  test_bibtex.py  test_db.py  test_embeddings.py  test_import_teams_pdfs.py  test_integrations_api.py  test_maps.py  test_mcp_access.py  test_metadata.py  test_overview.py  test_pdf_extract.py  test_social.py  test_style_cards.py  test_style_cards_v2.py  test_teams_integration.py  test_url_guard.py  test_urls.py
paper-radar/web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
paper-radar/web/public/fonts/: LICENSE.txt
paper-radar/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
paper-radar/web/src/components/: AddPaperDialog.tsx  AuthLayout.tsx  Avatar.tsx  BookmarkButton.tsx  Brand.tsx  CategoryPicker.tsx  Chip.tsx  ClaudeAccess.tsx  CopyBlock.tsx  Cover.tsx  Engagement.tsx  EngagementSummary.tsx  ExportBar.tsx  FigureCard.tsx  FigureDetail.tsx  FigureFields.tsx  FigureModal.tsx  FigureUploadDialog.tsx  HeroField.tsx  InviteCode.tsx  LabManagement.tsx  NotificationsBell.tsx  PaperCard.tsx  PaperDetail.tsx  PaperListRow.tsx  PaperModal.tsx  PaperPicker.tsx  SetupNotice.tsx  SourceLabel.tsx  ThemeProvider.tsx  ThemeToggle.tsx
paper-radar/web/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  modal.tsx  textarea.tsx
paper-radar/web/src/hooks/: useCopyToClipboard.ts  useDebouncedValue.ts  useDismiss.ts  useEngagementCounts.ts  useFigures.ts  useMcpAccess.ts  useMembers.ts  useMemberships.ts  useMentionActions.ts  useMentions.ts  useMyRole.ts  usePaperSearch.ts  usePapers.ts  useProfile.ts  useReadPapers.ts  useReadingList.ts  useRecommendations.ts  useSelection.ts  useSession.ts  useTeamTags.ts  useTeamVenues.ts
paper-radar/web/src/lib/: api.ts  cover.ts  figures.ts  licenses.ts  palette.ts  paperExport.ts  supabase.ts  types.ts  utils.ts
paper-radar/web/src/routes/: AppShell.tsx  Connect.tsx  Dashboard.tsx  Import.tsx  Landing.tsx  Layout.tsx  Login.tsx  Map.tsx  MapDashboard.tsx  MapsLibrary.tsx  MoodBoard.tsx  Onboarding.tsx  Papers.tsx  ReadingList.tsx  ResetPassword.tsx  Settings.tsx
