[project]
name = "paper-radar"
version = "0.1.0"
description = "Paper discovery + recommendation for a single breast-cancer spatial-biology lab"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ellen Schrader" }]
dependencies = [
    "anthropic>=0.40",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "pymupdf>=1.24",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "umap-learn>=0.5.6",
    "streamlit>=1.38",
    "typer>=0.12",
    "numpy>=1.26,<3",
    # Pin modern numba/llvmlite so the resolver doesn't backtrack to versions
    # that predate Python 3.12 (umap-learn -> pynndescent -> numba -> llvmlite).
    "numba>=0.60",
    "llvmlite>=0.43",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.scripts]
paper-radar = "paper_radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Stubs intentionally leave arguments unused; that is fine there.
ignore = ["B008"]  # typer uses function calls in argument defaults

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
